FIND_PACKAGE(SIP REQUIRED)
FIND_PACKAGE(PyQt4 REQUIRED)

IF(SIP_FOUND)
    INCLUDE_DIRECTORIES(${SIP_INCLUDE_DIR})
    INCLUDE(${PROJECT_SOURCE_DIR}/config/SIPMacros.cmake)

    SET(SIP_INCLUDES ${PYQT4_SIP_DIR})
    SET(SIP_EXTRA_OPTIONS "${PYQT4_SIP_FLAGS} -b ${CMAKE_CURRENT_SOURCE_DIR}/VigraQt.sbf")
    ADD_SIP_PYTHON_MODULE(VigraQt VigraQtmod.sip VigraQt)
ELSE()
    MESSAGE(STATUS "VigraQt python bindings are NOT built")
ENDIF()
